packaged/custodian-pipeline-with-hook/base/trigger-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: $(EVENT_LISTENER)
  name: route
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-$(EVENT_LISTENER)
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
